--- a/project4.html
+++ b/project4.html
@@ -2,46 +2,89 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Project 4 | Jitendra Krishna</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
-    /* Simple modal styles */
-    .modal {
-      display: none;
+    body { background: #fff; color: #1a202c; }
+
+    /* Modal backdrop + animation */
+    #imageModal {
       position: fixed;
-      z-index: 50;
-      padding-top: 60px;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      overflow: auto;
-      background-color: rgba(0,0,0,0.9);
+      inset: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: rgba(0,0,0,0.85);
+      opacity: 0;
+      visibility: hidden;
+      transition: opacity 0.35s ease, visibility 0.35s;
+      z-index: 9999;
     }
-    .modal-content {
-      margin: auto;
-      display: block;
+    #imageModal.open {
+      opacity: 1;
+      visibility: visible;
+    }
+
+    /* Modal image fade in/out */
+    #modalImg {
       max-width: 90%;
       max-height: 90%;
+      border-radius: 1rem;
+      box-shadow: 0 8px 30px rgba(0,0,0,0.6);
+      display: block;
+      opacity: 0;
+      transform: scale(0.98);
+      transition: opacity 0.35s ease, transform 0.35s ease;
     }
-    .modal-content, #caption {  
-      animation-name: zoom;
-      animation-duration: 0.3s;
+    #modalImg.loaded {
+      opacity: 1;
+      transform: scale(1);
     }
-    @keyframes zoom {
-      from {transform:scale(0)} 
-      to {transform:scale(1)}
-    }
-    .close {
+
+    /* Close button */
+    .modal-close {
       position: absolute;
-      top: 20px;
-      right: 35px;
-      color: #fff;
-      font-size: 40px;
-      font-weight: bold;
+      top: 1.5rem;
+      right: 2rem;
+      color: white;
+      font-size: 2.25rem;
       cursor: pointer;
+      z-index: 10000;
+      user-select: none;
     }
+
+    /* Arrow buttons */
+    .modal-arrow {
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      font-size: 2.6rem;
+      font-weight: 700;
+      color: #fff;
+      background: rgba(0,0,0,0.6);
+      padding: 0.75rem 1.1rem;
+      border-radius: 9999px;
+      cursor: pointer;
+      user-select: none;
+      z-index: 10000;
+      transition: background 0.25s ease, transform 0.18s ease, opacity 0.25s ease;
+      opacity: 0;
+    }
+    .modal-arrow.left { left: 1.5rem; }
+    .modal-arrow.right { right: 1.5rem; }
+    .modal-arrow:hover { background: rgba(0,0,0,0.85); transform: translateY(-50%) scale(1.08); }
+
+    /* Show arrows on hover */
+    #imageModal.open:hover .modal-arrow { opacity: 1; }
+
+    /* Thumbnail hover */
+    .popup-img { cursor: pointer; transition: transform 0.35s ease; will-change: transform; }
+    .popup-img:hover { transform: scale(1.06); }
+
+    /* Scroll reveal */
+    .fade-zoom { opacity: 0; transform: scale(0.98); transition: all 0.6s ease; }
+    .fade-zoom.show { opacity: 1; transform: scale(1); }
   </style>
 </head>
 <body class="bg-white text-gray-900">
@@ -54,17 +97,14 @@
   <!-- Project Hero -->
   <section class="relative h-80 flex flex-col justify-center items-center text-center bg-gray-100 mb-12">
     <h1 class="text-5xl md:text-6xl font-bold mb-4">I N T E G R A T E D  A P A R T M E N T  D E S I G N</h1>
-    <p class="text-xl md:text-2xl text-gray-600 tracking-widest">
-  E F F I C I E N T  V E R T I C A L  R E S I D E N T I A L  S P A C E S
-</p>
+    <p class="text-xl md:text-2xl text-gray-600 tracking-widest">E F F I C I E N T  V E R T I C A L  R E S I D E N T I A L  S P A C E S</p>
   </section>
 
-  <!-- Zig-Zag Project Sections -->
+  <!-- Project Sections -->
   <section class="max-w-6xl mx-auto py-12 px-6 space-y-16">
-
     <!-- Block 1 -->
-    <div class="grid md:grid-cols-2 gap-8 items-center">
-      <img src="./images/4a.png" alt="Project 4 Image 1" class="w-full h-auto rounded-xl shadow-lg cursor-pointer" onclick="openModal(this.src)" />
+    <div class="grid md:grid-cols-2 gap-8 items-center fade-zoom">
+      <img src="./images/4a.png" alt="Project 4 Image 1" class="w-full h-auto rounded-xl shadow-lg popup-img" data-index="0"/>
       <div>
         <h2 class="text-3xl font-semibold mb-4">S I T E</h2>
         <div class="space-y-3 leading-relaxed text-gray-700 text-lg">
@@ -77,10 +117,10 @@
       </div>
     </div>
 
-    <!-- Block 2 (reverse) -->
-    <div class="grid md:grid-cols-2 gap-8 items-center">
+    <!-- Block 2 -->
+    <div class="grid md:grid-cols-2 gap-8 items-center fade-zoom">
       <div class="md:order-2">
-        <img src="./images/4b.png" alt="Project 4 Image 2" class="w-full h-auto rounded-xl shadow-lg cursor-pointer" onclick="openModal(this.src)" />
+        <img src="./images/4b.png" alt="Project 4 Image 2" class="w-full h-auto rounded-xl shadow-lg popup-img" data-index="1"/>
       </div>
       <div class="text-gray-700 leading-loose">
         <div class="mb-8">
@@ -95,8 +135,8 @@
     </div>
 
     <!-- Block 3 -->
-    <div class="grid md:grid-cols-2 gap-8 items-center">
-      <img src="./images/4c.png" alt="Project 4 Image 3" class="w-full h-auto rounded-xl shadow-lg cursor-pointer" onclick="openModal(this.src)" />
+    <div class="grid md:grid-cols-2 gap-8 items-center fade-zoom">
+      <img src="./images/4c.png" alt="Project 4 Image 3" class="w-full h-auto rounded-xl shadow-lg popup-img" data-index="2"/>
       <div class="text-gray-700 leading-loose">
         <div class="mb-8">
           <h2 class="text-3xl font-semibold mb-4">E I G H T H  F L O O R  P L A N</h2>
@@ -109,10 +149,10 @@
       </div>
     </div>
 
-    <!-- Block 4 (reverse) -->
-    <div class="grid md:grid-cols-2 gap-8 items-center">
+    <!-- Block 4 -->
+    <div class="grid md:grid-cols-2 gap-8 items-center fade-zoom">
       <div class="md:order-2">
-        <img src="./images/4d.png" alt="Project 4 Image 4" class="w-full h-auto rounded-xl shadow-lg cursor-pointer" onclick="openModal(this.src)" />
+        <img src="./images/4d.png" alt="Project 4 Image 4" class="w-full h-auto rounded-xl shadow-lg popup-img" data-index="3"/>
       </div>
       <div class="text-gray-700 leading-loose">
         <div class="mb-8">
@@ -127,8 +167,8 @@
     </div>
 
     <!-- Block 5 -->
-    <div class="grid md:grid-cols-2 gap-8 items-center">
-      <img src="./images/4e.png" alt="Project 4 Image 5" class="w-full h-auto rounded-xl shadow-lg cursor-pointer" onclick="openModal(this.src)" />
+    <div class="grid md:grid-cols-2 gap-8 items-center fade-zoom">
+      <img src="./images/4e.png" alt="Project 4 Image 5" class="w-full h-auto rounded-xl shadow-lg popup-img" data-index="4"/>
       <div class="text-gray-700 leading-loose">
         <div class="mb-8">
           <h2 class="text-3xl font-semibold mb-4">S E C T I O N S</h2>
@@ -137,10 +177,10 @@
       </div>
     </div>
 
-    <!-- Block 6 (reverse) -->
-    <div class="grid md:grid-cols-2 gap-8 items-center">
+    <!-- Block 6 -->
+    <div class="grid md:grid-cols-2 gap-8 items-center fade-zoom">
       <div class="md:order-2">
-        <img src="./images/4f.png" alt="Project 4 Image 6" class="w-full h-auto rounded-xl shadow-lg cursor-pointer" onclick="openModal(this.src)" />
+        <img src="./images/4f.png" alt="Project 4 Image 6" class="w-full h-auto rounded-xl shadow-lg popup-img" data-index="5"/>
       </div>
       <div class="text-gray-700 leading-loose">
         <div class="mb-8">
@@ -150,36 +190,89 @@
       </div>
     </div>
 
-    <!-- Extra Gallery Images -->
-    <div class="mt-20 text-center">
+    <!-- Extra Gallery -->
+    <div class="mt-20 text-center fade-zoom">
       <h2 class="text-4xl font-bold mb-12">P R O J E C T &nbsp; G A L L E R Y</h2>
       <div class="flex justify-center gap-12 flex-wrap">
-        <img src="./images/4g.jpg" alt="Project 4 Image 7" class="w-[500px] rounded-2xl shadow-2xl cursor-pointer hover:scale-105 transition-transform duration-300" onclick="openModal(this.src)" />
-        <img src="./images/4h.jpg" alt="Project 4 Image 8" class="w-[500px] rounded-2xl shadow-2xl cursor-pointer hover:scale-105 transition-transform duration-300" onclick="openModal(this.src)" />
+        <img src="./images/4g.jpg" alt="Project 4 Image 7" class="w-[500px] rounded-2xl shadow-2xl popup-img" data-index="6"/>
+        <img src="./images/4h.jpg" alt="Project 4 Image 8" class="w-[500px] rounded-2xl shadow-2xl popup-img" data-index="7"/>
       </div>
     </div>
-
   </section>
 
   <!-- Modal -->
-  <div id="myModal" class="modal">
-    <span class="close" onclick="closeModal()">&times;</span>
-    <img class="modal-content" id="imgModal">
+  <div id="imageModal" aria-hidden="true" role="dialog" aria-label="Image viewer">
+    <div class="modal-close" role="button" aria-label="Close" onclick="closeModal()">×</div>
+    <button class="modal-arrow left" aria-label="Previous image" onclick="changeImage(-1)">&#10094;</button>
+    <img id="modalImg" src="" alt="Open project image">
+    <button class="modal-arrow right" aria-label="Next image" onclick="changeImage(1)">&#10095;</button>
   </div>
 
-  <!-- Back to Portfolio Button -->
+  <!-- Back Button -->
   <div class="max-w-6xl mx-auto px-6 py-12 text-center">
     <a href="index.html" class="inline-block px-6 py-3 bg-black text-white rounded-full hover:bg-gray-800">Back to Portfolio</a>
   </div>
 
   <script>
-    function openModal(src){
-      document.getElementById("myModal").style.display = "block";
-      document.getElementById("imgModal").src = src;
+    // Scroll reveal
+    const fadeElems = document.querySelectorAll('.fade-zoom');
+    function revealOnScroll() {
+      fadeElems.forEach(el => {
+        const rect = el.getBoundingClientRect();
+        if (rect.top < window.innerHeight - 100) el.classList.add('show');
+      });
     }
-    function closeModal(){
-      document.getElementById("myModal").style.display = "none";
+    window.addEventListener('load', revealOnScroll);
+    window.addEventListener('scroll', revealOnScroll);
+
+    // Modal
+    const popupThumbs = Array.from(document.querySelectorAll('.popup-img'));
+    const modal = document.getElementById('imageModal');
+    const modalImg = document.getElementById('modalImg');
+    let currentIndex = 0;
+
+    popupThumbs.forEach((thumb, i) => {
+      thumb.addEventListener('click', () => openModal(i));
+    });
+
+    function openModal(index){
+      currentIndex = index;
+      modal.classList.add('open');
+      modal.setAttribute('aria-hidden', 'false');
+      modalImg.classList.remove('loaded');
+      modalImg.src = popupThumbs[currentIndex].src;
+      modalImg.onload = () => requestAnimationFrame(() => modalImg.classList.add('loaded'));
     }
+
+    function closeModal() {
+      modal.classList.remove('open');
+      modal.setAttribute('aria-hidden', 'true');
+      setTimeout(() => { modalImg.src = ''; modalImg.classList.remove('loaded'); }, 300);
+    }
+
+    function changeImage(step){
+      currentIndex = (currentIndex + step + popupThumbs.length) % popupThumbs.length;
+      modalImg.classList.remove('loaded');
+      setTimeout(() => { modalImg.src = popupThumbs[currentIndex].src; }, 60);
+      modalImg.onload = () => modalImg.classList.add('loaded');
+    }
+
+    modal.addEventListener('click', e => { if(e.target===modal) closeModal(); });
+    document.addEventListener('keydown', e => {
+      if(!modal.classList.contains('open')) return;
+      if(e.key==='ArrowLeft') changeImage(-1);
+      if(e.key==='ArrowRight') changeImage(1);
+      if(e.key==='Escape') closeModal();
+    });
+
+    let touchStartX=0;
+    modal.addEventListener('touchstart', e => { if(!modal.classList.contains('open')) return; touchStartX=e.changedTouches[0].clientX; }, {passive:true});
+    modal.addEventListener('touchend', e => {
+      if(!modal.classList.contains('open')) return;
+      const dx = e.changedTouches[0].clientX - touchStartX;
+      if(dx>50) changeImage(-1);
+      if(dx<-50) changeImage(1);
+    }, {passive:true});
   </script>
 
 </body>
